fix(check-picker): fixed the group icon not showing in CheckPicker

--- a/src/Picker/styles/mixin.less
+++ b/src/Picker/styles/mixin.less
@@ -44,11 +44,7 @@
       top: @padding-base-vertical;
       right: @padding-base-horizontal;
       transition: transform 0.3s linear;
-
-      &::before {
-        content: @picker-select-arrow-down;
-        font-family: @font-family-icon;
-      }
+      padding: 3px;
     }
   }
 }
